--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
   tests:
     name: Pytest
     runs-on: ubuntu-latest
-    needs: [hassfest, hacs, lint]
+    needs: [lint]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
