--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,22 +8,20 @@ permissions:
   contents: read
 
 jobs:
-  hassfest:
+  validate-hassfest:
     name: Home Assistant hassfest
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Validate with hassfest
-        uses: home-assistant/actions/hassfest@main
+      - uses: actions/checkout@v6
+      - name: Hassfest validation
+        uses: home-assistant/actions/hassfest@master
 
-  hacs:
+  validate-hacs:
     name: HACS validation
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: HACS action
+      - uses: actions/checkout@v6
+      - name: HACS validation
         uses: hacs/action@main
         with:
           category: integration
