--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   lint:
-    name: Lint & Style
+    name: Lint & Style (Ruff)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,14 +18,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Install linters
+      - name: Install Ruff
         run: |
           python -m pip install --upgrade pip
-          pip install ruff black
+          pip install ruff
+      - name: Ruff (format check)
+        run: ruff format --check .
       - name: Ruff (lint)
         run: ruff check . --output-format=github
-      - name: Black (format check)
-        run: black --check .
 
   tests:
     name: Pytest
