--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Ruff (format check)
         run: ruff format --check .
       - name: Ruff (lint)
-        run: ruff check . --output-format=github
+        run: ruff check . --output-format=github --ignore=I001
 
   tests:
     name: Pytest
