--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,11 +41,11 @@ jobs:
       - name: Install test dependencies
         env:
           ha: "2025.12.0"
-          PIP_CONSTRAINT: "https://raw.githubusercontent.com/home-assistant/core/${{ env.ha }}/homeassistant/package_constraints.txt"
+          PIP_CONSTRAINT: "https://raw.githubusercontent.com/home-assistant/core/${ha}/homeassistant/package_constraints.txt"
         run: |
           python -m pip install --upgrade pip
           pip install -c ${PIP_CONSTRAINT} \
-            homeassistant==${{ env.ha }} \
+            homeassistant==${ha} \
             pytest pytest-cov pytest-asyncio pytest-homeassistant-custom-component
       - name: Run tests
         if: ${{ hashFiles('tests/**/*.py') != '' }}
