--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install test dependencies
         env:
           HA_VERSION: "2025.12.0"
-          PIP_CONSTRAINT: https://raw.githubusercontent.com/home-assistant/core/${{ env.HA_VERSION }}/homeassistant/package_constraints.txt
+          PIP_CONSTRAINT: https://raw.githubusercontent.com/home-assistant/core/2025.12.0/homeassistant/package_constraints.txt
         run: |
           python -m pip install --upgrade pip
           pip install -c ${PIP_CONSTRAINT} \
