--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,30 +27,30 @@ jobs:
       - name: Ruff (lint)
         run: ruff check . --output-format=github
 
-  tests:
-    name: Pytest
-    runs-on: ubuntu-latest
-    needs: [lint]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-      - name: Install test dependencies
-        env:
-          HA_VERSION: "2025.12.0"
-          PIP_CONSTRAINT: https://raw.githubusercontent.com/home-assistant/core/2025.12.0/homeassistant/package_constraints.txt
-        run: |
-          python -m pip install --upgrade pip
-          pip install -c ${PIP_CONSTRAINT} \
-            homeassistant==${HA_VERSION} \
-            pytest pytest-cov pytest-asyncio pytest-homeassistant-custom-component
-      - name: Run tests
-        if: ${{ hashFiles('tests/**/*.py') != '' }}
-        run: |
-          pytest -q --cov=custom_components.maxxisun --cov-report=xml
-      - name: No tests found
-        if: ${{ hashFiles('tests/**/*.py') == '' }}
-        run: echo "No tests found. Skipping pytest."
+  # tests:
+  #   name: Pytest
+  #   runs-on: ubuntu-latest
+  #   needs: [lint]
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: '3.13'
+  #     - name: Install test dependencies
+  #       env:
+  #         HA_VERSION: "2025.12.0"
+  #         PIP_CONSTRAINT: https://raw.githubusercontent.com/home-assistant/core/2025.12.0/homeassistant/package_constraints.txt
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -c ${PIP_CONSTRAINT} \
+  #           homeassistant==${HA_VERSION} \
+  #           pytest pytest-cov pytest-asyncio pytest-homeassistant-custom-component
+  #     - name: Run tests
+  #       if: ${{ hashFiles('tests/**/*.py') != '' }}
+  #       run: |
+  #         pytest -q --cov=custom_components.maxxisun --cov-report=xml
+  #     - name: No tests found
+  #       if: ${{ hashFiles('tests/**/*.py') == '' }}
+  #       run: echo "No tests found. Skipping pytest."
