--- a/custom_components/maxxisun/manifest.json
+++ b/custom_components/maxxisun/manifest.json
@@ -4,9 +4,9 @@
   "codeowners": ["@peter-lueer"],
   "config_flow": true,
   "documentation": "https://github.com/peter-lueer/Maxxisun-HA",
-  "integration_type": "hub",
+  "integration_type": "device",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/peter-lueer/Maxxisun-HA/issues",
   "requirements": [],
-  "version": "0.1.6"
+  "version": "0.2.0"
 }
